Removed some transparent background with solid, it's was used to solve some problem with the overflow shadow we used before, but I can't remember what it was for.

--- a/src/less/components/steps.less
+++ b/src/less/components/steps.less
@@ -37,7 +37,7 @@
 
             &:hover{
                 /* TODO : mixin? */
-                background-color: rgba(0,0,0,0.06);
+                background-color: @gray-10;
                 border-color: @gray-9;
             }
 
@@ -125,7 +125,7 @@
 
     .steps-selected {
         // 
-        background-color: rgba(0,0,0,0.06);
+        background-color: @gray-10;
         box-shadow: 1px 0 0 0 @gray-9, -1px 0 0 0 @gray-9, 0 1px 0 0 @gray-10;
     }
 
